--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.0.17",
     "react-tap-event-plugin": "^3.0.2"
   },
+  "proxy": "http://localhost:3030",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
